tests/NormalTests/paczka1/fuzzy1/18070045.err
Error in line 1: A457 S279 86,3
Error in line 3: jNqhWO1f S959 21,6
Error in line 26: A457 S279 10,54
Error in line 29: jNqhWO1f A457 85,8
Error in line 30: jNqhWO1f S959 43,1
Error in line 36: 78GvvWY A940 173,1
